--- a/templates/game.html
+++ b/templates/game.html
@@ -224,10 +224,30 @@
             document.getElementById('hintModal').classList.add('hidden');
         });
 
+        // ✨ 초성 추출 함수
+        function getChosungHint(text) {
+            const chosung = [
+                'ㄱ', 'ㄲ', 'ㄴ', 'ㄷ', 'ㄸ', 'ㄹ', 'ㅁ', 'ㅂ', 'ㅃ', 'ㅄ',
+                'ㅅ', 'ㅆ', 'ㅇ', 'ㅈ', 'ㅉ', 'ㅊ', 'ㅋ', 'ㅌ', 'ㅍ', 'ㅎ'
+            ];
+            
+            let hint = '';
+            for (let char of text) {
+                const code = char.charCodeAt(0);
+                if (code >= 0xAC00 && code <= 0xD7A3) {
+                    const index = Math.floor((code - 0xAC00) / 28 / 21);
+                    hint += chosung[index];
+                } else {
+                    hint += char;
+                }
+            }
+            return hint;
+        }
+
         document.getElementById('confirmHintBtn').addEventListener('click', () => {
             const question = gameState.questions[gameState.currentIndex];
             const answer = question.answer;
-            const hint = answer.charAt(0) + '*'.repeat(answer.length - 1);
+            const hint = getChosungHint(answer);
 
             alert(`힌트: ${hint}`);
             gameState.hintUsed = true;
